@@ -14,7 +14,7 @@ normal  = -q 3
 low     = -q 1
 tiny    = -q -1
 
-[wma]                                   # ffmpeg options
+[wma]                                   # avconv options
 insane  = -ab 320k -ac 2 -acodec wmav2
 extreme = -ab 256k -ac 2 -acodec wmav2
 high    = -ab 192k -ac 2 -acodec wmav2
